<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".shelterDetails">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shelter_details"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sheltername"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="50dp"
        />

    <EditText
        android:id="@+id/sheltername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addresss"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="50dp"
        />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suburb"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="50dp"
        />
    <EditText
        android:id="@+id/suburb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="50dp"
       />
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="50dp"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

<Button
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:text="@string/email_shelter"
    android:layout_marginTop="340dp"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:background="@color/colorAccent"
    />
    <Button
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/view_in_map"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="420dp"/>

</RelativeLayout>